test bandit can now test multiple at once, extra prints added for debugging

--- a/spynnaker.cfg
+++ b/spynnaker.cfg
@@ -92,5 +92,5 @@ enable_reinjection = True
 #max_application_binaries_kept = 2
 extract_iobuf = True
 #extract_iobuf = False
-writeProvenanceData = True
+#writeProvenanceData = True
 
