--- a/spynnaker.cfg
+++ b/spynnaker.cfg
@@ -88,7 +88,7 @@ enable_reinjection = True
 [Reports]
 #defaultReportFilePath=./reports_local
 #defaultApplicationDataFilePath=./app_data_local
-#max_reports_kept = 2
+max_reports_kept = 50
 #max_application_binaries_kept = 2
 extract_iobuf = True
 #extract_iobuf = False
