Removed a print to unclog screen and hopefully fix issue with ends 'not happening'

--- a/experiments/spynnaker.cfg
+++ b/experiments/spynnaker.cfg
@@ -93,4 +93,9 @@ max_reports_kept = 50
 #extract_iobuf = True
 #extract_iobuf = False
 #writeProvenanceData = True
+reports_enabled = True
+
+#write_text_specs = True
+#write_application_graph_placer_report = True
+#write_machine_graph_placer_report = True
 
