--- a/spynnaker.cfg
+++ b/spynnaker.cfg
@@ -94,3 +94,7 @@ extract_iobuf = True
 #extract_iobuf = False
 #writeProvenanceData = True
 
+#write_text_specs = True
+#write_application_graph_placer_report = True
+#write_machine_graph_placer_report = True
+
