shortened config name length, added config to status print, progressing bandit games slowly

--- a/experiments/spynnaker.cfg
+++ b/experiments/spynnaker.cfg
@@ -90,7 +90,7 @@ enable_reinjection = False
 #defaultApplicationDataFilePath=./app_data_local
 max_reports_kept = 2000
 #max_application_binaries_kept = 2
-#extract_iobuf = True
-extract_iobuf = False
+extract_iobuf = True
+#extract_iobuf = False
 #writeProvenanceData = True
 
