huge restructure of printing to accommodate the adding of network tracking which saves and prints the number of connections and neurons of each type for the whole pop as well as plasticity ratio, timeout of spinnaker is longer now, added calcium adaptive neuron thing, fixed printing of single network,

--- a/experiments/spynnaker.cfg
+++ b/experiments/spynnaker.cfg
@@ -49,6 +49,7 @@ turn_off_machine = True
 timeScaleFactor  = 1
 enable_advanced_monitor_support=False
 enable_reinjection = False
+post_simulation_overrun_before_error = 60
 
 [Database]
 #---------
