--- a/experiments/spynnaker.cfg
+++ b/experiments/spynnaker.cfg
@@ -91,7 +91,7 @@ post_simulation_overrun_before_error = 60
 #defaultApplicationDataFilePath=./app_data_local
 max_reports_kept = 2000
 #max_application_binaries_kept = 2
-extract_iobuf = True
-#extract_iobuf = False
-#writeProvenanceData = True
+#extract_iobuf = True
+extract_iobuf = False
+writeProvenanceData = False
 
