placement is now determined by max_chips_per_board, runs with java out

--- a/experiments/spynnaker.cfg
+++ b/experiments/spynnaker.cfg
@@ -50,6 +50,8 @@ timeScaleFactor  = 1
 enable_advanced_monitor_support=True
 enable_reinjection = False
 post_simulation_overrun_before_error = 60
+repair_machine = True
+disable_advanced_monitor_usage_for_data_in = True
 
 [Java]
 use_java = True
@@ -117,5 +119,6 @@ max_reports_kept = 2000
 #max_application_binaries_kept = 2
 #extract_iobuf = True
 extract_iobuf = False
+#writeProvenanceData = True
 writeProvenanceData = False
 
