--- a/spynnaker.cfg
+++ b/spynnaker.cfg
@@ -49,6 +49,8 @@ turn_off_machine = True
 timeScaleFactor  = 1
 enable_advanced_monitor_support=True
 enable_reinjection = False
+repair_machine = True
+disable_advanced_monitor_usage_for_data_in = True
 
 [Java]
 use_java = True
@@ -116,7 +118,7 @@ max_reports_kept = 2000
 #max_application_binaries_kept = 2
 extract_iobuf = True
 #extract_iobuf = False
-#writeProvenanceData = True
+writeProvenanceData = True
 
 #write_text_specs = True
 #write_application_graph_placer_report = True
