minor functional changes, current neuron only evolves time constant, recall small changes

--- a/experiments/spynnaker.cfg
+++ b/experiments/spynnaker.cfg
@@ -54,7 +54,7 @@ repair_machine = True
 disable_advanced_monitor_usage_for_data_in = True
 
 [Java]
-use_java = True
+use_java = False
 # call to start a java process.
 # If there is no jdk../bin in your class path this must include the full path
 java_call = java
